<resources>
    <string name="app_name">imitatorAI</string>
    <string name="enter_the_expected_message">Enter the expected message from your friend</string>
    <string name="target_name_hint">Name of target contact</string>
    <string name="reply_rate_hint">Max reply delay time</string>
    <string name="add">Add</string>
    <string name="delete_msg">Delete this message</string>
    <string name="enable_notification">Turn on notification listening service</string>
    <string name="auto_reply">imitatorAI</string>
    <string name="create">Create</string>
    <string name="no_reply_available">No reply available</string>
    <string name="done">Done</string>
    <string name="about_me">Hi\nI\'m Nikhil\nI code garbage apps and sites</string>
    <string name="i_am">About Me</string>
    <string name="share">Share App</string>
    <string name="play_store_link">https://play.google.com/store/apps/dev?id=5678454527601486137</string>
    <string name="github_link">https://github.com/nikhilnair31</string>
    <string name="source_code">Github Profile</string>
    <string name="create_new">Create Target</string>
    <string name="give_permission">This app requires notification access to read notifications and reply accordingly.</string>
    <string name="give_permission_access">give permission access</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="no_target_assigned">No Target Contact Assigned</string>
    <string name="continue_btn_text">Continue</string>
</resources>
