<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/about_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/i_am"
        android:textColor="@color/fab_primary_color"
        android:textSize="42sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/close_dialog_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/icon_close"
        android:clickable="true" />

    <TextView
        android:id="@+id/text_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_header"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat"
        android:lines="3"
        android:text="@string/about_me"
        android:textColor="@color/less_dark_gray"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/share_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_two"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/transparent_background"
        android:drawableStart="@drawable/ic_share_2"
        android:drawablePadding="8dp"
        android:drawableTint="@color/header_color"
        android:elevation="8dp"
        android:fontFamily="@font/montserrat"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:text="@string/share"
        android:textAllCaps="true"
        android:textColor="@color/fab_primary_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/github_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/share_app"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/transparent_background"
        android:drawableStart="@drawable/ic_github"
        android:drawablePadding="8dp"
        android:drawableTint="@color/header_color"
        android:elevation="8dp"
        android:fontFamily="@font/montserrat"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:text="@string/source_code"
        android:textAllCaps="true"
        android:textColor="@color/fab_primary_color"
        android:textSize="16sp" />

</RelativeLayout>
