<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_toStartOf="@+id/close_button"
            android:fontFamily="@font/montserrat"
            android:text="@string/create_new"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/close_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/icon_close"
            android:clickable="true"
            android:focusable="true" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/target_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:layout_marginTop="20dp"
            android:hint="@string/target_name_hint"
            android:paddingLeft="30dp"
            android:paddingTop="5dp"
            android:paddingRight="30dp"
            android:paddingBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/target_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:paddingTop="@dimen/margin_sixteen"
                android:paddingBottom="@dimen/margin_sixteen" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reply_rate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/target_name"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/fab_primary_color"
            android:hint="@string/reply_rate_hint"
            android:paddingLeft="30dp"
            android:paddingTop="5dp"
            android:paddingRight="30dp"
            android:paddingBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reply_rate_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:paddingTop="@dimen/margin_sixteen"
                android:paddingBottom="@dimen/margin_sixteen" />

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/fab_primary_color"
        android:baselineAlignBottom="true"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:shapeAppearanceOverlay="@style/TextFab" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="@dimen/margin_sixteen"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/colorAccent"
        android:baselineAlignBottom="true"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:shapeAppearanceOverlay="@style/TextFab" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>


